--- a/main.html
+++ b/main.html
@@ -21,10 +21,12 @@
     </div>
     <h2>Now Playing...</h2>
     <div class="player_two">
-        <video src="https://www.w3schools.com/tags/movie.mp4" controls ></video>
-		<source>
+        <video controls><source src="https://www.w3schools.com/tags/movie.mp4"></video>
     <h2>MP3 songs</h2>
-		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		
+        <audio controls>
+            <source src="https://www.pagalworld.com.se/files/download/id/64630">
+        </audio>
   
 	</div>
     
